[package]
name = "m"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = "0.7.8"
crossterm = "0.27.0"
humantime = "2.1.0"
itertools = "0.11.0"
ratatui = "0.23.0"
sysinfo = "0.29.10"
uom = "0.35.0"

